# bw-secret-manager

./: .gitignore  README.md  pyproject.toml
secrets_manager/: bitwarden.py  cli.py  env_writer.py  utils.py
