[project]
name = "secret-manager"
version = "0.1.0"
description = "Developer-friendly Bitwarden secret fetcher for .env files"
authors = [{ name = "Can" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
secret-manager = "secrets_manager.cli:main"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"